--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -5,3 +5,7 @@
 .img--frame{
   @include images ($img-brdr:1px solid $color-text,$img-padding:10px)
 }
+
+.grid__col--3:first-of-type{
+  @include flexy ($alself:center);
+}
