--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -11,6 +11,12 @@
     padding-bottom:2em;
 }
 
+
+
+nav{
+  width:100%;
+}
+
 // li styling in nav
 .nav
 {
@@ -18,19 +24,18 @@
   list-style: none;
   padding:0;
   @include mq ('tablet'){
-  @include flexy ($dir:row, $just:space-between, $disp:flex);
+  @include flexy ($dir:row, $just:space-around, $disp:flex);
   }
   a {
-    @include buttons($btn-text-color:$color-text);
+    @include buttons($btn-text-color:$color-text,$padding:0.5em 1em);
       &:hover{
         background-color:$color-secondary;
+        padding:em(10px);
       }
     }
 }
 
-.grid__col--3:first-of-type{
-  @include flexy ($alself:center);
-}
+
 
 // desktop nav
 
